# second-brain

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/: main.py
backend/services/: extraction.py
