[tool.poetry]
name = "second-brain"
version = "0.1.0"
description = ""
authors = ["Joash <joashalonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
